# fiddlesticks

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/workflows/: tests.yml
fchat/: Cargo.toml  README.md
fchat/src/: error.rs  lib.rs  service.rs  store.rs  tools.rs  types.rs
fchat/tests/: tool_loop_integration.rs
fcommon/: Cargo.toml  README.md
fcommon/src/: lib.rs
fharness/: Cargo.toml  LICENSE  README.md
fharness/src/: error.rs  harness.rs  hooks.rs  lib.rs  traits.rs  types.rs
fharness/tests/: harness_integration.rs
fiddlesticks/: Cargo.toml  README.md
fiddlesticks/src/: agent.rs  lib.rs  macros.rs  prelude.rs  providers.rs  runtime.rs  util.rs
fmemory/: Cargo.toml  README.md
fmemory/src/: adapter.rs  backend.rs  error.rs  lib.rs  types.rs
fmemory/src/backends/: filesystem.rs  mod.rs  postgres.rs  sqlite.rs
fobserve/: Cargo.toml  README.md
fobserve/src/: lib.rs  metrics_hooks.rs  safe_hooks.rs  tests.rs  tracing_hooks.rs
fprovider/: Cargo.toml  README.md
fprovider/src/: credentials.rs  error.rs  lib.rs  model.rs  prelude.rs  provider.rs  registry.rs  resilience.rs  stream.rs
fprovider/src/adapters/: anthropic.rs  claude.rs  mod.rs  ollama.rs  openai.rs  opencode_zen.rs
fprovider/src/adapters/openai/: auth.rs  mod.rs  provider.rs  responses_ws.rs  serde_api.rs  tests.rs  transport.rs  types.rs
fprovider/tests/: anthropic_provider_behavior.rs  ollama_provider_behavior.rs  openai_provider_behavior.rs  openai_provider_integration.rs  opencode_zen_provider_behavior.rs
ftooling/: Cargo.toml  README.md
ftooling/src/: args.rs  error.rs  hooks.rs  lib.rs  registry.rs  runtime.rs  tool.rs  types.rs
