[package]
name = "fchat"
version = "0.9.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Chat library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"

[dependencies]
async-stream = "0.3"
fcommon = { path = "../fcommon" }
futures-core = "0.3"
futures-timer = "3"
futures-util = "0.3"
ftooling = { path = "../ftooling" }
fprovider = { path = "../fprovider" }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false