[package]
name = "fchat"
version = "0.9.91"
edition = "2024"
rust-version = "1.93"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Chat library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "chat", "llm", "orchestration", "runtime"]
categories = ["asynchronous", "development-tools"]

[dependencies]
async-stream = "0.3"
fcommon = { path = "../fcommon", version = "0.9.91" }
futures-core = "0.3"
futures-timer = "3"
futures-util = "0.3"
ftooling = { path = "../ftooling", version = "0.9.91" }
fprovider = { path = "../fprovider", version = "0.9.91" }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
