[package]
name = "fcommon"
version = "0.9.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Common library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"

[dependencies]

[lib]
doctest = false