[package]
name = "fcommon"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Common library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "agents", "types", "primitives", "runtime"]
categories = ["development-tools"]

[dependencies]

[lib]
doctest = true
