[package]
name = "fharness"
version = "0.1.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Harness library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"

[dependencies]
fcommon = "0.1.0"
fchat = "0.1.0"
fmemory = "0.1.0"
fprovider = "0.1.0"
ftooling = "0.1.0"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false
