[package]
name = "fharness"
version = "0.9.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Harness library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "agents", "harness", "workflow", "runtime"]
categories = ["asynchronous", "development-tools"]

[dependencies]
fcommon = { path = "../fcommon" }
fchat = { path = "../fchat" }
fmemory = { path = "../fmemory" }
fprovider = { path = "../fprovider" }
ftooling = { path = "../ftooling" }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
