[package]
name = "fharness"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Harness library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "agents", "harness", "workflow", "runtime"]
categories = ["asynchronous", "development-tools"]

[dependencies]
fcommon = { path = "../fcommon", version = "1.0.0" }
fchat = { path = "../fchat", version = "1.0.0" }
fmemory = { path = "../fmemory", version = "1.0.0" }
fprovider = { path = "../fprovider", version = "1.0.0" }
ftooling = { path = "../ftooling", version = "1.0.0" }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
