[package]
name = "fiddlesticks"
version = "0.9.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Primary library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"

[features]
default = ["provider-openai"]
provider-openai = ["fprovider/provider-openai"]
provider-opencode-zen = ["fprovider/provider-opencode-zen"]
provider-anthropic = ["fprovider/provider-anthropic"]
provider-claude = ["fprovider/provider-claude"]

[dependencies]
fchat = { path = "../fchat" }
fcommon = { path = "../fcommon" }
fharness = { path = "../fharness" }
fmemory = { path = "../fmemory" }
fprovider = { path = "../fprovider" }
ftooling = { path = "../ftooling" }
reqwest = { version = "0.12", default-features = true }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
