[package]
name = "fiddlesticks"
version = "0.9.9"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Primary library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "agents", "llm", "harness", "runtime"]
categories = ["asynchronous", "development-tools"]

[features]
default = ["provider-openai"]
provider-openai = ["fprovider/provider-openai"]
provider-opencode-zen = ["fprovider/provider-opencode-zen"]
provider-anthropic = ["fprovider/provider-anthropic"]
provider-claude = ["fprovider/provider-claude"]

[dependencies]
fchat = { path = "../fchat", version = "0.9.9" }
fcommon = { path = "../fcommon", version = "0.9.9" }
fharness = { path = "../fharness", version = "0.9.9" }
fmemory = { path = "../fmemory", version = "0.9.9" }
fprovider = { path = "../fprovider", version = "0.9.9" }
ftooling = { path = "../ftooling", version = "0.9.9" }
reqwest = { version = "0.12", default-features = true }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
