[package]
name = "fiddlesticks"
version = "0.9.91"
edition = "2024"
rust-version = "1.93"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Primary library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "agents", "llm", "harness", "runtime"]
categories = ["asynchronous", "development-tools"]

[features]
default = ["provider-openai"]
provider-openai = ["fprovider/provider-openai"]
provider-opencode-zen = ["fprovider/provider-opencode-zen"]
provider-anthropic = ["fprovider/provider-anthropic"]

[dependencies]
fchat = { path = "../fchat", version = "0.9.91" }
fcommon = { path = "../fcommon", version = "0.9.91" }
fharness = { path = "../fharness", version = "0.9.91" }
fmemory = { path = "../fmemory", version = "0.9.91" }
fprovider = { path = "../fprovider", version = "0.9.91" }
ftooling = { path = "../ftooling", version = "0.9.91" }
reqwest = { version = "0.12", default-features = true }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
