[package]
name = "fmemory"
version = "0.9.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Memory library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"

[dependencies]
fchat = { path = "../fchat" }
fcommon = { path = "../fcommon" }
fprovider = { path = "../fprovider" }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false
