[package]
name = "fmemory"
version = "0.9.9"
edition = "2024"
rust-version = "1.93"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Memory library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "memory", "transcript", "persistence", "state"]
categories = ["asynchronous", "database"]

[dependencies]
fchat = { path = "../fchat", version = "0.9.9" }
fcommon = { path = "../fcommon", version = "0.9.9" }
fprovider = { path = "../fprovider", version = "0.9.9" }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.48.0", features = ["rt", "sync", "net"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
