[package]
name = "fobserve"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Observability library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "observability", "metrics", "tracing", "hooks"]
categories = ["asynchronous", "development-tools::debugging"]

[dependencies]
fcommon = { path = "../fcommon", version = "1.0.0" }
fharness = { path = "../fharness", version = "1.0.0" }
fprovider = { path = "../fprovider", version = "1.0.0" }
ftooling = { path = "../ftooling", version = "1.0.0" }
metrics = "0.24"
tracing = "0.1"

[lib]
doctest = true
