[package]
name = "fprovider"
version = "1.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Provider library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "llm", "providers", "openai", "ollama"]
categories = ["asynchronous", "api-bindings"]

[features]
default = [
    "provider-opencode-zen",
    "provider-openai",
    "provider-anthropic",
    "provider-ollama",
]
provider-opencode-zen = [
    "provider-openai",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:futures-util",
    "dep:async-stream",
]
provider-openai = [
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:futures-util",
    "dep:async-stream",
]
provider-anthropic = ["provider-openai"]
provider-ollama = ["provider-openai"]

[dependencies]
fcommon = { path = "../fcommon", version = "1.0.0" }
futures-core = "0.3"
futures-util = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
