[package]
name = "ftooling"
version = "0.1.0"
edition = "2024"

[dependencies]
fcommon = { path = "../fcommon" }
futures-timer = "3"
futures-util = "0.3"
fprovider = { path = "../fprovider" }
serde_json = "1"

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false