[package]
name = "ftooling"
version = "0.1.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Tool library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"

[dependencies]
fcommon = "0.1.0"
futures-timer = "3"
futures-util = "0.3"
fprovider = "0.1.0"
serde_json = "1"

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false