[package]
name = "ftooling"
version = "0.9.0"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "Tool library for the fiddlesticks agent harness framework"
license = "MIT"
repository = "https://github.com/philogroves/fiddlesticks"
keywords = ["ai", "tools", "function-calling", "runtime", "orchestration"]
categories = ["asynchronous", "development-tools"]

[dependencies]
fcommon = { path = "../fcommon" }
futures-timer = "3"
futures-util = "0.3"
fprovider = { path = "../fprovider" }
serde_json = "1"

[dev-dependencies]
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = true
